// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engine draws corner sprites correctly (according to mirror isles) 1`] = `
Array [
  Array [
    Array [
      "STATIONARY Background",
      "STATIONARY RemoveLandRUD",
    ],
    Array [
      "STATIONARY Hole",
    ],
  ],
]
`;

exports[`engine draws corner sprites correctly (according to skipping stones) 1`] = `
Array [
  Array [
    Array [
      "STATIONARY Sand",
      "STATIONARY RemoveLandRUD",
    ],
    Array [
      "STATIONARY Background",
    ],
    Array [
      "STATIONARY Background",
    ],
  ],
]
`;

exports[`engine draws corner sprites correctly (according to skipping stones) 2`] = `
Array [
  Array [
    Array [
      "STATIONARY Sand",
      "STATIONARY RemoveLandRUD",
    ],
    Array [
      "STATIONARY Background",
    ],
    Array [
      "STATIONARY Background",
    ],
  ],
]
`;

exports[`engine evaluates a simple game 1`] = `
Array [
  Array [
    Array [
      "STATIONARY one",
    ],
    Array [
      "STATIONARY Player",
    ],
  ],
]
`;

exports[`engine keeps running the rule even when only the direction changed 1`] = `
Array [
  Array [
    Array [
      "STATIONARY Green",
    ],
    Array [
      "STATIONARY Green",
    ],
    Array [
      "STATIONARY Green",
    ],
  ],
  Array [
    Array [
      "STATIONARY Background",
      "STATIONARY Blue",
      "STATIONARY Red",
    ],
    Array [
      "STATIONARY Background",
      "STATIONARY Blue",
      "STATIONARY Red",
    ],
    Array [
      "STATIONARY Background",
      "STATIONARY Blue",
      "STATIONARY Red",
    ],
  ],
]
`;
